--- a/trash.html
+++ b/trash.html
@@ -53,3 +53,20 @@
   //   });
   // });
   // End Scroll locking ^^^^
+
+  /* #animatedImage {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0;
+    /* ตั้งค่าความคมชัดเริ่มต้นเป็น 0 */
+  /* transition: opacity 0.5s ease-in-out; */
+  /* ใช้ transition เพื่อทำแอนิเมชันของความคมชัด */
+  
+
+  /* @media (max-width: 400px) {
+    #shelf {
+          background-size: auto 1080px;
+      }
+  } */
