--- a/ending/ending.html
+++ b/ending/ending.html
@@ -9,14 +9,41 @@
   <link rel="stylesheet" href="end.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped&family=Prompt&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped&family=Prompt&display=swap"
+    rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="ending_img/favicon-icon.png">
   <title>Left Over</title>
 </head>
 
 <body>
+  <audio id="endingbgsound" autoplay>
+    <source src="../Sound Effect/6 Ending/Celebration Background Music.mp3" type="audio/mpeg">
+  </audio>
+  <div class="desktop">
+    <div id="animationContainer">
+      <img class="rotateImage" src="ending_img/Download_1.png">
+      <img class="rotateImage" src="ending_img/Download_2.png">
+      <img class="rotateImage" src="ending_img/Download_3.png">
+      <img class="rotateImage" src="ending_img/Download_4.png">
+      <img class="rotateImage" src="ending_img/Download_5.png">
+      <img class="rotateImage" src="ending_img/Download_6.png">
+      <!-- <img class="rotateImage" src="ending_img/it_logo.png">
+      <img class="rotateImage" src="ending_img/AAD_web-be.png"> -->
+      <!-- <img class="rotateImage" src="ending_img/Download_6.png"> -->
+    </div>
+    <!-- <img src="../img file/page_3/Trash_all.png" class="food"> -->
+    <img src="ending_img/Ending.png" class="food1">
+    <p class="text_1">ร่วมกันลดขยะอาหาร</p>
+    <p class="text_2">ให้ทุกคนตระหนักและร่วมกันส่วนหนึ่งในการอนุรักษ์ธรรมชาติและสิ่งแวดล้อม </p>
+    <p class="text_3">ให้โลกของเราน่าอยู่ต่อไป เรื่องง่าย ๆ เริ่มทำได้ด้วยตัวเอง </p>
+    <!-- <p class="text_4">กลับหน้าแรก</p> -->
+    <a class="text_4" href="../index.html">กลับหน้าแรก</a>
+    <img src="ending_img/Logo_Main.png" style="margin-left: 90%;" class="logo_1">
+    <img src="ending_img/logo_sud_jarb.png" style="width:190px; margin-left: 78.8%; margin-top: 1.8%;" class="logo_1">
+  </div>
 
-  <head>
+  <div class="mobile">
+    <div id="Container_all">
     <div id="animationContainer">
       <img class="rotateImage" src="ending_img/Download_1.png">
       <img class="rotateImage" src="ending_img/Download_2.png">
@@ -25,16 +52,25 @@
       <img class="rotateImage" src="ending_img/Download_5.png">
       <img class="rotateImage" src="ending_img/Download_6.png">
     </div>
-    <img src="ending_img/end_3.png" class="food">
-    <p class="text_1">ร่วมกันลดอาหารขยะ</p>
-    <p class="text_2">ให้ทุกคนตระหนักและร่วมกันส่วนหนึ่งในการอนุรักษ์ธรรมชาติและสิ่งแวดล้อม </p>
-    <p class="text_3">ให้โลกของเราน่าอยู่ต่อไป เรื่องง่าย ๆ เริ่มทำได้ด้วยตัวเอง </p>
+    <!-- <img src="../img file/page_3/Trash_all.png" class="food_mo"> -->
+      <img src="ending_img/Ending_2.png" class="food_mo1">
+    <p class="text_5">ร่วมกันลดขยะอาหาร</p>
+    <p class="text_6">ให้ทุกคนตระหนักและร่วมกันส่วนหนึ่งในการอนุรักษ์ธรรมชาติและสิ่งแวดล้อม </p>
+    <p class="text_7">ให้โลกของเราน่าอยู่ต่อไป เรื่องง่าย ๆ</p>
+      <p class="text_7" style="top:45%">เริ่มทำได้ด้วยตัวเอง </p>
     <!-- <p class="text_4">กลับหน้าแรก</p> -->
-    <a class="text_4" href="../index.html">กลับหน้าแรก</a>
-    <img src="ending_img/Logo_Main.png" class="logo">
-    
-
-  </head>
+    <a class="text_8" href="../index.html">กลับหน้าแรก</a>
+    <img src="ending_img/Logo_Main.png" class="logo_2">
+    <img src="ending_img/logo_sud_jarb.png" style="width:190px; margin-left: 5%; margin-top: 2%;" class="logo_1">
+      </div>
+      </div>
+  </div>
+  <audio id="ending-background-audio" src="../Sound Effect/6 Ending/Celebration Background Music.mp3"></audio>
+  <script>
+        var audio = document.getElementById("endingbgsound");
+        audio.play();
+    </script>
 </body>
 
+  
 </html>
